# linkedin-job-scraper

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
linkedin/: .my_env  items.py  pipelines.py  settings.py
linkedin/spiders/: linkedin-jobs.py  linkedin_jobs.py
