[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = ""
authors = ["grpollak <pollakgeorg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.1"
scrapeops-scrapy = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
