[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = ""
authors = ["grpollak <pollakgeorg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.1"
scrapeops-scrapy = "^0.5.2"
python-dotenv = "^1.0.0"
pymongo = {extras = ["srv"], version = "^4.5.0"}
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
debugpy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
